test/message/eval_messages.out
[eval]
[eval]:1
with(this){__filename}
^^^^
SyntaxError: Strict mode code may not include a with statement
    at new Script (node:vm:*:*)
    at createScript (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal/process/execution:*:*
    at [eval]-wrapper:*:*
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_string:*:*
42
42
[eval]:1
throw new Error("hello")
^

Error: hello
    at [eval]:1:7
    at Script.runInThisContext (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal/process/execution:*:*
    at [eval]-wrapper:*:*
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_string:*:*

[eval]:1
throw new Error("hello")
^

Error: hello
    at [eval]:1:7
    at Script.runInThisContext (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal/process/execution:*:*
    at [eval]-wrapper:*:*
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_string:*:*
100
[eval]:1
var x = 100; y = x;
               ^

ReferenceError: y is not defined
    at [eval]:1:16
    at Script.runInThisContext (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal/process/execution:*:*
    at [eval]-wrapper:*:*
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_string:*:*

[eval]:1
var ______________________________________________; throw 10
                                                    ^
10
(Use `* --trace-uncaught ...` to show where the exception was thrown)

[eval]:1
var ______________________________________________; throw 10
                                                    ^
10
(Use `* --trace-uncaught ...` to show where the exception was thrown)
done
